# foolscap

./: .clang-format  .clangd  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/adr/: 0001-language-and-tooling.md
firmware_esp32s3/: CMakeLists.txt  sdkconfig.defaults
firmware_esp32s3/components/lilygo_epd47/: CMakeLists.txt  ed047tc1.c  epd_driver.c  rmt_pulse.c
firmware_esp32s3/main/: CMakeLists.txt  idf_component.yml
src/app/buffer/: buffer.c  buffer.h
src/app/editor/: editor.c  editor.h  editor_config.h  editor_test.h
src/app/layout/: layout.c  layout.h
src/app/render/: font.h  rect.c  rect.h  render.c  render.h  render_internal.h
src/app/render/fonts/: ibm_plex_mono_20.c  ibm_plex_mono_20.h  ibm_plex_mono_24.c  ibm_plex_mono_24.h  ibm_plex_mono_32.c  ibm_plex_mono_32.h
src/app/util/: utf8.c  utf8.h
src/hal/: hal_display.h  hal_mem.h
src/ports/esp32s3/: ble_input_esp32s3.c  display_esp32s3.c  esp_hid_gap.c  esp_hid_gap.h  hid_keymap.c  hid_keymap.h  input_esp32s3.h  key_event.h  main_esp32s3.c  mem_esp32s3.c
src/ports/sdl/: display_sdl.c  main_sdl.c  mem_sdl.c
tests/: CMakeLists.txt  test_buffer.c  test_compute_cursor_position.c  test_draw_glyph.c  test_editor.c  test_find_glyph.c  test_hid_keymap.c  test_layout.c  test_layout_apply_edit.c  test_put_pixel.c  test_rect.c  test_render.c  test_render_fill_rect.c  test_utf8.c
tests/mocks/: display_mock.c  display_mock.h
tools/fontgen/: CMakeLists.txt  fontgen.c  stb_truetype.h
